--- a/module_2/lecture_05/auth_and_db/configs/dev.env
+++ b/module_2/lecture_05/auth_and_db/configs/dev.env
@@ -1,6 +1,10 @@
 MONGO_URI=mongodb+srv://skillslash:skillslash@cluster0.sq7lkpn.mongodb.net/?retryWrites=true&w=majority
+PORT=5000
 JWT_SECRET=thisisasecret
-SMPT_HOST=smtp-relay.brevo.com
-SMPT_PORT=587
-SMPT_USER=ganga.chaturvedi24@gmail.com
-SMPT_PASS=1HhprdXvRG9TAzNS
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=ganga.chaturvedi24@gmail.com
+SMTP_PASS=1HhprdXvRG9TAzNS
+
+PUBLIC_URL=http://localhost:5000
+
